fix(z_index): FRMW-312-z-index-error

--- a/src/rxApp/rxApp.less
+++ b/src/rxApp/rxApp.less
@@ -481,7 +481,7 @@
 
         & > .rx-notifications {
             position:fixed;
-            z-index: 5;
+            z-index: 20;  // accommodate rxSelect .fake-select class
             top: 0px;
             left: 300px;
             right: 100px;
